[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Lille_tutorial.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Gammel_mand.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/French revolution.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Information Napolion 3.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Information Napolion 1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Information Napolion 2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Napolion.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=10]
[ext_resource path="res://Scenes/NapolionKriger.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.937255, 0.866667, 0.584314 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainScene" type="Node2D"]
script = ExtResource( 10 )

[node name="French revolution" parent="." instance=ExtResource( 5 )]
position = Vector2( -266, -63 )
scale = Vector2( 1.5, 1.5 )

[node name="Gammel_mand" parent="." instance=ExtResource( 4 )]
position = Vector2( 114, -5 )
scale = Vector2( 0.35, 0.35 )

[node name="Napolion" parent="." instance=ExtResource( 9 )]
position = Vector2( 636, 667 )
scale = Vector2( 0.2, 0.2 )

[node name="Information Napolion 1" parent="." instance=ExtResource( 7 )]
position = Vector2( 644, -2 )

[node name="Information Napolion 2" parent="." instance=ExtResource( 8 )]
position = Vector2( 350, 190 )

[node name="Information Napolion 3" parent="." instance=ExtResource( 6 )]
position = Vector2( 1379, -30 )

[node name="NapolionKriger" parent="." instance=ExtResource( 11 )]
position = Vector2( 563, -17 )

[node name="NapolionKriger2" parent="." instance=ExtResource( 11 )]
position = Vector2( 420, -16 )

[node name="NapolionKriger3" parent="." instance=ExtResource( 11 )]
position = Vector2( 323, 310 )

[node name="NapolionKriger4" parent="." instance=ExtResource( 11 )]
position = Vector2( 1133, 89 )

[node name="NapolionKriger5" parent="." instance=ExtResource( 11 )]
position = Vector2( 1381, 35 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Information" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="Information"]
margin_left = 15.0
margin_top = 66.0
margin_right = 512.0
margin_bottom = 170.0
custom_styles/panel = SubResource( 1 )

[node name="Information_1" type="Label" parent="Information"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 18.0
margin_top = 77.0
margin_right = 501.0
margin_bottom = 159.0
text = "Information 1:
Napoleon udnævnte sig selv som Kejser i 1804 efter et
militærkup i 1799, som havde smidt alle andre konsuler i																																																		 Frankrig 
af magten og efterladte ham som førstekonsul, i andre ord: Det gjorde ham 
til den mest magtfulde mand i Frankrig på det tidspunkt."

[node name="Panel2" type="Panel" parent="Information"]
margin_left = 15.0
margin_top = 183.0
margin_right = 515.0
margin_bottom = 419.0
custom_styles/panel = SubResource( 1 )

[node name="Information_2" type="Label" parent="Information"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 18.0
margin_top = 201.0
margin_right = 519.0
margin_bottom = 402.0
text = "Information 2:
Frankrigs og Ruslands forhold til hinanden er starten på Napoleons fald. 
Rusland var utilfredse med nogle af Napoleons bedrifter da Rusland havde 
lidt konsekvenser af nogle af ændringerne han havde lavet i Europa. 
Napoleon invaderer Moskva og får kontrol, Rusland brænder dog byen af 
og Napoleons hær er tvunget til at forlade Rusland.
Her lider Frankrig stort nederlag og mister langt størstedelen 
af hæren der var taget til Moskva.
Nederlaget i Rusland ledte til oprør i Tyskland som han også 
taber og det ender med at hans herredømme bryder sammen 1813. 
Tyskland, England, Rusland og Preussen tager kontrol over Frankrig 
og forviser Napoleon til en Ø som han kan styre."

[node name="Panel3" type="Panel" parent="Information"]
margin_left = 15.0
margin_top = 445.0
margin_right = 570.0
margin_bottom = 583.0
custom_styles/panel = SubResource( 1 )

[node name="Information_3" type="Label" parent="Information"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 18.0
margin_top = 458.0
margin_right = 571.0
margin_bottom = 574.0
text = "Information 3:
Der har været rygter på at Napoleon blev myrdet af nogle der var bekymret eller 
utilfredse med Napoleon og hans ideologier og havde forgiftet ham, men hver gang 
man har undersøgt det som mulighed er man endt op tomhændet.
Der er større sandsynlighed for Napoleon døde af kræft, det kommer fra Napoleon
tit holder sig til maven på malerier af ham, muligvis pga af smerter fra kræft og det er 
den måde man tror han døde på i 1821."

[node name="Menu" parent="." instance=ExtResource( 3 )]

[node name="Lille_tutorial" parent="." instance=ExtResource( 2 )]
